WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308220
Swift Back Forward List Catalyst fixes
https://bugs.webkit.org/show_bug.cgi?id=308220
Summary
Swift Back Forward List Catalyst fixes
adrian_taylor
Reported
2026-02-19 06:17:58 PST
Building the Swift Back Forward List for Mac catalyst results in complaints about UIEdgeInsets being referred to from the WebKit-Swift-Generated.h file in code which is not gated by #ifdef __OBJC__. Work around that bug. Also resolve a later issue which occurs when ViewGestureControllerIOS.mm tries to call methods on the Swift Web Back Forward List.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-19 06:18:06 PST
<
rdar://problem/170719877
>
adrian_taylor
Comment 2
2026-02-19 06:22:08 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59006
EWS
Comment 3
2026-02-19 14:42:10 PST
Committed
307854@main
(90d71dd6ea78): <
https://commits.webkit.org/307854@main
> Reviewed commits have been landed. Closing PR #59006 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug