Swift Back Forward List Catalyst fixes https://bugs.webkit.org/show_bug.cgi?id=308220 rdar://170719877

Reviewed by Richard Robinson.

This prevents the misgeneration of UIEdgeOffsets within the generated
WebKit-Swift-Generated.h file outside of #ifdef __OBJC__ gated sections. It
also fixes a later compile error where we were calling functions on the Swift
WebBackForwardList without having its full definition.

Canonical link: https://commits.webkit.org/307854@main